Added project html

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ github: BhushanGitHub
 # medium: .medium.com
 # vimeo:
 # lanyrd:
-email: bhushan.suryawanshi@gmail.com
+email: bhushanfordatascience@gmail.com
 #datacamp: bhushans
 
 authors:
