--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ picture: assets/images/headshot.png
 # and specify source (external or local).
 resume: true
 resume-external: false
-resume-url: assets/bhushanS.pdf
+resume-url: assets/BhushanSuryawanshi_DataEngineer.pdf
 
 url: https://bhushangithub.github.io
 # your url: https://USERNAME.github.io
